force-app/main/default/objects/OPP_Counter__c.object
<CustomObject>
    <fields>
        <fullName>Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <formula>CASE(
MOD(DATEVALUE(CreatedDate) - DATE(1900, 1, 7), 7),
0, &quot;1.Sunday&quot;,
1, &quot;2.Monday&quot;,
2, &quot;3.Tuesday&quot;,
3, &quot;4.Wednesday&quot;,
4, &quot;5.Thursday&quot;,
5, &quot;6.Friday&quot;,
6, &quot;7.Saturday&quot;, &quot;Error&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>User__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Page__c</fullName>
        <label>Page</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>My Tasks</fullName>
                </value>
                <value>
                    <fullName>My Profile</fullName>
                </value>
                <value>
                    <fullName>News</fullName>
                </value>
                <value>
                    <fullName>News Detail</fullName>
                </value>
                <value>
                    <fullName>App Store</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>OPP_Counter</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>OPP Counter</label>
    <nameField>
        <label>OPP Counter Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>